Fix coverage reports (#13)