@@ -10,7 +10,11 @@ version = "0.1.2"
 plugins {
     id("org.jetbrains.intellij") version "1.7.0"
     kotlin("jvm") version "1.7.10"
-    jacoco
+    id("org.jetbrains.kotlinx.kover") version "0.5.0"
+}
+
+kover {
+    generateReportOnCheck = true
 }
 
 intellij {
@@ -24,44 +28,35 @@ intellij {
 dependencies {
     implementation(kotlin("stdlib-jdk8"))
 
-    testImplementation(platform("org.junit:junit-bom:5.8.2"))
+    testImplementation(platform("org.junit:junit-bom:5.9.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.junit.platform:junit-platform-launcher")
     testImplementation("io.strikt:strikt-jvm:0.34.1")
-    testImplementation("io.mockk:mockk:1.12.4")
+    testImplementation("io.mockk:mockk:1.12.5")
     testImplementation("org.apache.commons:commons-lang3:3.12.0")
 }
 
 tasks {
-    val jacocoTestReport = "jacocoTestReport"(JacocoReport::class) {
-        reports {
-            xml.required.set(true)
-            html.required.set(false)
-        }
-    }
-
     patchPluginXml {
         untilBuild.set(null as String?)
     }
 
-    "test"(Test::class) {
+    koverHtmlReport {
+        isEnabled = false
+    }
+
+    test {
         useJUnitPlatform()
         jvmArgs(
-            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
             "--add-opens=java.base/java.io=ALL-UNNAMED",
-            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
         )
 
         testLogging {
             events = setOf(PASSED, SKIPPED, FAILED)
             exceptionFormat = FULL
         }
-    }
-
-    "check" {
-        dependsOn(jacocoTestReport)
     }
 
     withType<KotlinCompile> {
